feat: add "código" field to Carreira with DTO updates, repository integration, and refactor response building to centralize logic